--- a/styles/slider/slider.css
+++ b/styles/slider/slider.css
@@ -11,13 +11,14 @@
   height: 100%;
   width: 100%;
   background-size: 900px 900px;
-  background-position: center;
 }
 .main-container .background-img {
   background-image: url("../../images/colors-modified.jpg");
 }
 .main-container .foreground-img {
+  width: 50%;
   background-image: url("../../images/colors.jpg");
+  border-right: solid 5px black;
 }
 .main-container #slider {
   height: 100%;
@@ -26,6 +27,7 @@
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+  border: none;
   background-color: transparent;
 }
 .main-container #slider ::-webkit-slider-thumb {
@@ -33,7 +35,7 @@
           appearance: none;
   height: 15px;
   width: 15px;
-  border: 1px solid black;
-  background-color: white;
+  border: none;
+  background-color: none;
   border-radius: 50%;
 }/*# sourceMappingURL=slider.css.map */
