--- a/styles/slider/slider.scss
+++ b/styles/slider/slider.scss
@@ -11,15 +11,15 @@
     height: 100%;
     width: 100%;
     background-size: 900px 900px;
-    background-position: center;
-    // background-size: cover;
   }
 
   .background-img {
     background-image: url("../../images/colors-modified.jpg");
   }
   .foreground-img {
+    width: 50%;
     background-image: url("../../images/colors.jpg");
+    border-right: solid 5px black;
   }
 
   #slider {
@@ -27,14 +27,15 @@
     width: 100%;
     position: relative;
     appearance: none;
+    border: none;
     background-color: transparent;
 
     & ::-webkit-slider-thumb {
       appearance: none;
       height: 15px;
       width: 15px;
-      border: 1px solid black;
-      background-color: white;
+      border: none;
+      background-color: none;
       border-radius: 50%;
     }
   }
